--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Mirror of http://git.kernel.org/cgit/utils/dash/dash.git
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
